Add VisibleForTestingChecker